Version 1.20.0 *
==================
- Added fonts JetBrains Mono, Source Code Pro, Fira Code, and Cousine.
- Selected JetBrains Mono as default font for text editors.
  - This can be switched back to the default font in Settings (F7) in the "Editor & Log" tab.
- Fixed that Studio stuck after opening the Model Dialog after upgrading to Qt 6.8.1.
- Upgraded to Qt 6.8.1

Version 1.19.5
==================
- Fixed missing "Set as Main File" in the Project Explorer context menu.

Version 1.19.4
==================
- Added fallback for data locations with special characters (non Latin-1 characters). Select a license location outside the user directory as a fallback.
- Fixed adding existing files to the project, although `Abort` was selected when getting a model from the model library.
- Fixed system log information text for check for update, which has been marked as an error.
- Fixed create a gsp file when exporting an internal project.
- Improved behavior when a new project is created. It counts as an internal project and no gsp-file is created.
- Improved Project view context menu. Disable the delete operation for the GAMS-System project and files.

Version 1.19.3
==================
- added system log messages for check for update
- added reject the installation of GAMSPy and GAMSPy++ licenses
- fixed empty Help View when using Studio on macOS with Apple silicon (ARM)
- fixed Studio Windows package does not contain `libcrypto` and `libssl`
- fixed copying code to clipboard in GAMS Documentation Help view
- fixed wrong project executed after jumping to a bookmark
- fixed crash when closing GAMS Studio

Version 1.19.2
==================
- fixed usage of ISO-8859-1 for license file paths on Windows
- fixed unsorted files in project subfolder
- fixed closing Connect editor and Studio on saving connect file
- fixed Studio version information on macOS (Info.plist)
- fixed Welcome Page link to the [GAMS Forum](https://forum.gams.com/)