@@ -3,6 +3,7 @@ Version 1.20.0 *
 - Added fonts JetBrains Mono, Source Code Pro, Fira Code, and Cousine.
 - Selected JetBrains Mono as default font for text editors.
   - This can be switched back to the default font in Settings (F7) in the "Editor & Log" tab.
+- Fixed that project changes after using 'Save as...' were not always persistent.
 - Fixed that Studio stuck after opening the Model Dialog after upgrading to Qt 6.8.1.
 - Upgraded to Qt 6.8.1
 
